examples/test/testpolicy7011.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7011
  namespace: namespace399
spec:
  podSelector:
    matchLabels:
      key0: value17
      key49: value32
      key29: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value23
          key9: value30
      podSelector:
        matchLabels:
          key25: value35
          key42: value15
          key8: value7
